# ant

./: BUILD.bazel  build.sh  gen-2dplot.py  gen-data.sh  gen-plot.py  gen-sine.py  gen-video.sh  process-data.sh  result.csv
src/: ant.cpp  ant_12arr.cpp  ant_1d.cpp  ant_2d.cpp  ant_2d_bc.cpp  ant_array.cpp  ant_array4.cpp  ant_bc.cpp  ant_coarse.cpp  ant_directional.cpp  ant_fix_dir.cpp  ant_infra_test.cpp  ant_lerp4.cpp  ant_mathc_cos.cpp  ant_mathc_sin.cpp
src/include/: ant.hpp  constants.hpp  lerpTable.hpp  numerics.hpp
src/test/: testEigen.cpp
