cc_import(
    name = "eigen_import",
    hdrs = glob(["Eigen/**"]),
)

cc_library(
	name = "eigen_lib",
	deps = ["eigen_import"],
)

cc_library(
	name = "ant_lib",
	hdrs = [
		"src/include/numerics.hpp",
	],
)

cc_binary(
    name = "test",
    srcs = [
        "src/test/testEigen.cpp",
    ],
    deps = [":eigen_lib"],
)

cc_binary(
    name = "ant_1d",
    srcs = [
        "src/ant_1d.cpp",
    ],
    deps = [":eigen_lib"],
)

cc_binary(
    name = "ant_coarse",
    srcs = [
        "src/ant_coarse.cpp",
    ],
    deps = [":eigen_lib"],
)

cc_binary(
    name = "ant_bc",
    srcs = [
        "src/ant_bc.cpp",
    ],
    deps = [":eigen_lib"],
)

cc_binary(
    name = "ant_directional",
    srcs = [
        "src/ant_directional.cpp",
    ],
    deps = [":eigen_lib"],
)

cc_binary(
    name = "ant_mathc_cos",
    srcs = [
        "src/ant_mathc_cos.cpp",
    ],
    deps = [":eigen_lib"],
)

cc_binary(
    name = "ant_infra_test",
    srcs = [
        "src/ant_infra_test.cpp",
    ],
    deps = [
    	":eigen_lib",
	":ant_lib",
    ],
)

cc_binary(
    name = "ant_mathc_sin",
    srcs = [
        "src/ant_mathc_sin.cpp",
    ],
    deps = [
    	":eigen_lib",
	":ant_lib",
    ],
)

cc_binary(
    name = "ant_fix_dir",
    srcs = [
        "src/ant_fix_dir.cpp",
    ],
    deps = [
    	":eigen_lib",
	":ant_lib",
    ],
)

