cc_import(
    name = "eigen_import",
    hdrs = glob(["Eigen/**"]),
)

cc_import(
    name = "fmt_import",
    hdrs = glob(["fmt/*"]),
)

cc_library(
	name = "eigen_lib",
	deps = ["eigen_import"],
)

cc_library(
	name = "fmt_lib",
	deps = ["fmt_import"],
)

cc_library(
	name = "ant_lib",
	hdrs = [
		"src/include/ant.hpp",
		"src/include/numerics.hpp",
		"src/include/sintable_0_0001.hpp",
		"src/include/sintable_0_00001.hpp",
		"src/include/lerpTable.hpp",
	],
)

cc_binary(
    name = "test",
    srcs = [
        "src/test/testEigen.cpp",
    ],
    deps = [":eigen_lib"],
)

cc_binary(
    name = "ant_1d",
    srcs = [
        "src/ant_1d.cpp",
    ],
    deps = [":eigen_lib"],
)

cc_binary(
    name = "ant_coarse",
    srcs = [
        "src/ant_coarse.cpp",
    ],
    deps = [":eigen_lib"],
)

cc_binary(
    name = "ant_bc",
    srcs = [
        "src/ant_bc.cpp",
    ],
    deps = [":eigen_lib"],
)

cc_binary(
    name = "ant_directional",
    srcs = [
        "src/ant_directional.cpp",
    ],
    deps = [":eigen_lib"],
)

cc_binary(
    name = "ant_mathc_cos",
    srcs = [
        "src/ant_mathc_cos.cpp",
    ],
    deps = [":eigen_lib"],
)

cc_binary(
    name = "ant_infra_test",
    srcs = [
        "src/ant_infra_test.cpp",
    ],
    deps = [
    	":eigen_lib",
	":ant_lib",
    ],
)

cc_binary(
    name = "ant_mathc_sin",
    srcs = [
        "src/ant_mathc_sin.cpp",
    ],
    deps = [
    	":eigen_lib",
	":ant_lib",
    ],
)

cc_binary(
    name = "ant_fix_dir",
    srcs = [
        "src/ant_fix_dir.cpp",
    ],
    deps = [
    	":eigen_lib",
	":ant_lib",
    ],
)

cc_binary(
    name = "ant_lerp3",
    srcs = [
        "src/ant_lerp3.cpp",
    ],
    deps = [
    	":eigen_lib",
	":ant_lib",
    ],
)

cc_binary(
    name = "ant_lerp4",
    srcs = [
        "src/ant_lerp4.cpp",
    ],
    deps = [
    	":eigen_lib",
	":ant_lib",
    ],
)

cc_binary(
    name = "ant_2d",
    srcs = [
        "src/ant_2d.cpp",
    ],
    deps = [
    	":eigen_lib",
    	":fmt_lib",
	":ant_lib",
    ],
    linkopts = ["-lgomp"],
)

cc_binary(
    name = "ant_2d_bc",
    srcs = [
        "src/ant_2d_bc.cpp",
    ],
    deps = [
    	":eigen_lib",
    	":fmt_lib",
	":ant_lib",
    ],
    linkopts = ["-lgomp"],
)

